2004-02-25 Jordi Mas i Hernadez <jordi@ximian.com>

	* ColorMatrix.cs: rewritten to be able to marshall it properly
	
2004-12-27  Zoltan Varga  <vargaz@freemail.hu>

	* ImageCodecInfo.cs: Fix marshalling of arrays on amd64.

2004-11-25  Marek Safar  <marek.safar@seznam.cz>

	* ColorPalette.cs: Add CheckStatus to GetAdjustedPalette.

2004-11-03  Miguel de Icaza  <miguel@ximian.com>

	* ColorPalette.cs: Add internal Clone method

2004-10-08  Ravindra  <rkumar@novell.com>

	* BitmapData.cs: Synchronized the class with BitmapData struct
	in libgdiplus.

2004-06-13  Gert Driesen <drieseng@users.sourceforge.net>
	
	* EmfPlusRecordType.cs: fixed mismatches in enum field values

2004-05-18 Jordi Mas i Hernadez <jordi@ximian.com>
	* ImageAttributes.cs: SetBrushRemapTable and SetRemapTable were
	passing bad parameters to GDI+ causing them not to work 

2004-05-16  Gert Driesen (drieseng@users.sourceforge.net)

	* EncoderParameterValueType.cs: fix Windows build (CSC), 
	MCS bug #58571

	* EncoderParameter.cs: removed ctors taking int value,
        to fix public API

2004-05-14  Vladimir Vukicevic  <vladimir@pobox.com>

	* EncoderParameters.cs: Added ToNativePtr() method to marshal
	struct correctly to a native struct.  Resulting data should be
	FreeHGlobal'd when finished.

	* EncoderParameter.cs: Changed data storage to correspond to
	native code layout (so we can pass these structs directly to
	native code).  Also changed layout to match native layout.

	* EncoderParameterValueType.cs: force EncoderParameterValueType to
	be Int32

2004-05-13 Jordi Mas i Hernadez <jordi@ximian.com>

	* ColorMatrix.cs:Make private data private 
	* ColorPalette.cs: Make private data private
	* Encoder.cs: Make private data private
	* EncoderParameter.cs: Make private data private
	* EncoderParameters.cs: Make private data private
	* MetaHeader.cs: Make private data private
	* PropertyItem.cs: Make private data private

2004-05-04  Vladimir Vukicevic  <vladimir@pobox.com>
